k8s/01-account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      serviceAccountName: cloud-sql-proxy-sa
      containers:
        - name: account-api
          image: asia-east1-docker.pkg.dev/ticketing-system-498218/app-repo/api:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
        - name: cloud-sql-proxy-account
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.0
          args:
            - "--structured-logs"
            - "--address=0.0.0.0"
            - "--port=5432"
            - "ticketing-system-498218:asia-east1:account-db"
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
        - name: cloud-sql-proxy-employee
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.0
          args:
            - "--structured-logs"
            - "--address=0.0.0.0"
            - "--port=5433"
            - "ticketing-system-498218:asia-east1:employee-db"
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: default
spec:
  selector:
    app: account-service
  ports:
    - port: 80
      targetPort: 8080
