k8s/02-event-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      serviceAccountName: cloud-sql-proxy-sa
      containers:
        - name: event-api
          image: asia-east1-docker.pkg.dev/ticketing-system-498218/cloud-run-source-deploy/event-ticketing-system-api/event-api:336aa67
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
        - name: cloud-sql-proxy-event
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.0
          args:
            - "--structured-logs"
            - "--address=0.0.0.0"
            - "--port=5432"
            - "ticketing-system-498218:asia-east1:event-db"
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: default
spec:
  selector:
    app: event-service
  ports:
    - port: 80
      targetPort: 8080
